[-] Fized bug with white strip on the left (on small resolutions)

--- a/src/css/_contacts.scss
+++ b/src/css/_contacts.scss
@@ -1,5 +1,5 @@
 .contacts {
-  display: display;
+  display: block;
   background: $cPurpleDark;
   background: linear-gradient(to bottom, $cPurpleDark, $cPurpleLight);
 
